k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc
  labels:
    app: abc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abc
  template:
    metadata:
      labels:
        app: abc
    spec:
      containers:
        - name: abc
          image: rodstewart/abc:v2
          ports:
            - containerPort: 5000
