k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc
  labels:
    app: abc
spec:
  selector:
    app: abc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
